--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "playwright-testrail-reporter",
   "version": "1.2.1",
   "description": "Report Playwright test results to TestRail",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "types": "src/index.d.ts",
   "files": [
     "/src"
