--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/niche-tester/playwright-testrail-reporter.git"
+    "url": "git+https://github.com/serhatgemici/playwright-testrail-reporter.git"
   },
   "bugs": {
-    "url": "https://github.com/niche-tester/playwright-testrail-reporter.git"
+    "url": "https://github.com/serhatgemici/playwright-testrail-reporter.git"
   },
-  "homepage": "https://github.com/niche-tester/playwright-testrail-reporter#readme",
+  "homepage": "https://github.com/serhatgemici/playwright-testrail-reporter.git#readme",
   "keywords": [
     "playwright",
     "testrail",
